# 2025_20694928

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.cpp  adder.exp  adder.h  hello.cpp  libadder.exp
Worksheet3/adder_static/include/: adder.h
Worksheet4/Calc/: CMakeLists.txt  adder.h  calc.cpp
Worksheet4/Calc_Dynamic/: CMakeLists.txt  adder.h
Worksheet4/hello_cmake/: CMakeLists.txt
Worksheet5/: CMakeLists.txt  adder.h
Worksheet5/html/: adder_8h.html  adder_8h_source.html
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex
Worksheet6/Project/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/Project/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.slnx  Project.vcxproj  Project.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Worksheet6/Project/build2/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  deploy_Project_75c137656f-Debug.cmake  deploy_Project_75c137656f-MinSizeRel.cmake  deploy_Project_75c137656f-RelWithDebInfo.cmake  deploy_Project_75c137656f-Release.cmake
Worksheet6/Project/build2/Project_autogen/include_Debug/: ui_mainwindow.h
Worksheet6/Project/build2/Project_autogen/include_Debug/EWIEGA46WW/: moc_ModelPartList.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_icons_CMAKE_.cpp
Worksheet6/VRBaseStation/: CMakeLists.txt  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/Worksheet_6/: CMakeLists.txt  mainwindow.ui
Worksheet7/Exercise 3/VRBaseStation/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
